<resources>
    <string name="app_name">RoboApp</string>
    <string name="textfield_hint_password">password</string>
    <string name="textfield_hint_username">username</string>
    <string name="fragment_login_title">Welcome</string>
    <string name="fragment_login_button">Login</string>
    <string name="fragment_login_edit_server_button">Edit server</string>
    <string name="fragment_login_app_guide_button">App guide</string>
    <string name="fragment_login_welcome_paragraph">Log in with the credentials provided by your club</string>
    <string name="fab_new_regatta">New Regatta</string>
    <string name="fragment_regatta_list_searchbar_text">Search a regatta</string>
    <string name="regatta_list_no_regattas_title">There are no regattas</string>
    <string name="regatta_list_no_regattas_description">Regattas are interactive sailing courses that you can design and manage in real time with others. Create a new regatta with the new regatta button</string>
    <string name="snackbar_regatta_deleted_text">1 Regatta deleted</string>
    <string name="snackbar_regatta_deleted_undo">Undo delete</string>
    <string name="login_form_validation_username_required">Username required</string>
    <string name="login_form_validation_password_required">Password required</string>
    <string name="login_form_validation_password_too_short">Password too short</string>
    <string name="login_form_validation_invalid_credentials">Invalid credentials</string>
    <string name="fragment_url_config_title">Api server base URL</string>
    <string name="textfield_hint_api_url">Api URL</string>
    <string name="button_apply_changes">Apply changes</string>
    <string name="button_cancel">Cancel</string>
    <string name="location_permissions_required_title">Location permissions required</string>
    <string name="location_permissions_required_description">Your real time location will be shown on the map, and shared in real time to simplifiy the management of the regatta</string>
    <string name="button_edit_permissions">Edit permissions</string>
    <string name="button_back">Back</string>
    <string name="notification_title">Regatta running</string>
    <string name="notification_text">regatta details</string>
    <string name="notification_channel_name">regattas</string>
    <string name="notification_channel_description">Immediate updates on navigation and running regattas</string>
    <string name="textfield_hint_regatta_name">name</string>
    <string name="fragment_create_regatta_title">Create Regatta</string>
    <string name="textfield_hint_regatta_course_axis">course axis (grade)</string>
    <string name="textfield_hint_regatta_course_length">course length (km)</string>
    <string name="textfield_hint_regatta_start_line_length">start line length (m)</string>
    <string name="toggleButton_triangle">triangle</string>
    <string name="buttonToggle_stick">stick</string>
    <string name="materialSwitch_stacchetto">stacchetto</string>
    <string name="textfield_hint_regatta_stacchetto_distance">distance (m)</string>
    <string name="materialSwitch_bolina">bolina</string>
    <string name="textfield_hint_regatta_bolina_distance">distance (m)</string>
    <string name="textfield_hint_regatta_buoy_stern">buoy stern</string>
    <string name="fragment_create_regatta_button">Create regatta</string>
    <array name="buoy_stern_array">
        <item>None</item>
        <item>Single</item>
        <item>Gate</item>
    </array>
    <string name="textfield_missing_field_error">Required field</string>
    <string name="textfield_invalid_field_error">Invalid field</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regatta_menu_map">Map</string>
    <string name="regatta_menu_buoy">Buoys</string>
    <string name="regatta_menu_roboa">BuoyBots</string>
    <string name="regatta_menu_boat">Assistance</string>
    <!-- TODO: Remove or change this -->
    <string name="first_item_menu_boats">item1</string>
    <!-- TODO: Remove or change this -->
    <string name="second_item_menu_boats">item2</string>
    <!-- TODO: Remove or change this -->
    <string name="menu_boats">menu</string>
    <!-- TODO: Remove or change this -->
    <string name="click_on_boats">cavolo nico</string>
    <string name="running_regatta_error_location_permission">Device location failed</string>
    <string name="snackbar_info_swipe_to_delete_regatta">Swipe left to delete this regatta</string>
    <string name="create_regatta_creation_generic_error">\"Regatta creation failed. Error \"</string>
    <string name="fragment_boat_info_title">Assistance Boats</string>
    <string name="fragment_roboa_info_title">BuoyBots</string>
    <string name="fragment_buoy_info_title">Buoys</string>
    <string name="fragment_info_navigation_hint">click on an item to set the navigation</string>
    <string name="race_officer">Race Officer</string>
    <string name="support_boat">Support Boat</string>
    <string name="status_online">Online</string>
    <string name="textfield_duplicate_field_error">Regatta already exists! Please insert a valid name</string>
    <string name="compass_image_description">compass</string>
    <string name="DistancetoTarget">Distance(m)</string>
    <string name="fragment_edit_regatta_button">Edit Regatta</string>
    <string name="regatta_name">regattaName</string>
    <string name="regatta_course_axis">courseAxis</string>
    <string name="regatta_course_length">courseLength</string>
    <string name="regatta_start_line_length">startLineLength</string>
    <string name="regatta_stacchetto_distance">stacchettoDistance</string>
    <string name="regatta_bolina_distance">bolinaDistance</string>
    <string name="regatta_buoy_stern">buoyStern</string>
    <string name="regatta_name_error">regattaNameError</string>
    <string name="regatta_course_axis_error">courseAxisError</string>
    <string name="regatta_course_length_error">courseLengthError</string>
    <string name="regatta_start_line_length_error">startLineLengthError</string>
    <string name="regatta_stacchetto_distance_error">stacchettoDistanceError</string>
    <string name="regatta_bolina_distance_error">bolinaDistanceError</string>
    <string name="regatta_buoy_stern_error">buoySternError</string>
    <string name="regatta_buoy_stern_none">None</string>
    <string name="regatta_buoy_stern_single">Single</string>
    <string name="regatta_buoy_stern_gate">Gate</string>
    <string name="error">Error</string>
    <string name="name">name</string>
    <string name="wind_direction">windDirection</string>
    <string name="course_length">courseLength</string>
    <string name="start_line_length">startLineLen</string>
    <string name="type">type</string>
    <string name="break_distance">breakDistance</string>
    <string name="second_mark_distance">secondMarkDistance</string>
    <string name="botton_buoy">bottonBuoy</string>
    <string name="fragment_edit_regatta_title">Edit Regatta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_boe_da_cui_scegliere">Pick a buoy to bind:</string>
    <string name="manage_your_robuoy">Manage your robuoy</string>
    <string name="click_to_unbind">Click to unbind</string>
    <string name="actions_to_take">Actions you can take:</string>
    <string name="info_about_robuoy">Some info about yout robuoy:</string>

</resources>