<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/regatta_menu_map" />

    <item
        android:id="@+id/buoyInfoFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_flag_24"
        android:title="@string/regatta_menu_buoy" />

    <item
        android:id="@+id/roboaInfoFragment"
        android:icon="@drawable/baseline_fiber_manual_record_24"
        android:enabled="true"
        android:title="@string/regatta_menu_roboa" />

    <item
        android:id="@+id/boatInfoFragment"
        android:icon="@drawable/baseline_sailing_24"
        android:enabled="true"
        android:title="@string/regatta_menu_boat" />

</menu>