<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="createRegattaViewModel"
            type="it.halb.roboapp.ui.main.CreateRegattaViewModel" />
    </data>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="false"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >


                    <TextView
                        android:id="@+id/textViewCreateRegatta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:text="@string/fragment_create_regatta_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                        app:layout_constraintBottom_toTopOf="@+id/textInputRegattaName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRegattaName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/textfield_hint_regatta_name"
                        app:errorEnabled="true"
                        app:layout_constraintBottom_toTopOf="@+id/textInputRegattaCourseAxis"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            app:layout_constraintWidth_max="488dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRegattaCourseAxis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/textfield_hint_regatta_course_axis"
                        app:errorEnabled="true"
                        app:layout_constraintBottom_toTopOf="@+id/textInputRegattaCourseLength"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            app:layout_constraintWidth_max="488dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRegattaCourseLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/textfield_hint_regatta_course_length"
                        app:errorEnabled="true"
                        app:layout_constraintBottom_toTopOf="@+id/textInputRegattaStartLineLength"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            app:layout_constraintWidth_max="488dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRegattaStartLineLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/textfield_hint_regatta_start_line_length"
                        app:errorEnabled="true"
                        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            app:layout_constraintWidth_max="488dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:singleSelection="true"
                        app:selectionRequired="true"
                        app:checkedButton="@+id/buttonStick"
                        app:layout_constraintBottom_toTopOf="@+id/materialSwitchStacchetto"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <Button
                            style="?attr/materialButtonOutlinedStyle"
                            android:id="@+id/buttonStick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buttonToggle_stick"
                            />
                        <Button
                            style="?attr/materialButtonOutlinedStyle"
                            android:id="@+id/buttonTriangle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/toggleButton_triangle"
                            />
                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/materialSwitchStacchetto"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/materialSwitch_stacchetto"
                        android:layout_marginBottom="8dp"
                        android:onClick="@{() -> createRegattaViewModel.setStacchetto()}"
                        app:switchPadding="256dp"
                        app:layout_constraintBottom_toTopOf="@+id/textInputRegattaStacchettoDistance"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRegattaStacchettoDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:enabled="@{createRegattaViewModel.enableStacchettoDistance}"
                        android:hint="@string/textfield_hint_regatta_stacchetto_distance"
                        app:errorEnabled="true"
                        app:layout_constraintBottom_toTopOf="@+id/materialSwitchBolina"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            app:layout_constraintWidth_max="488dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/materialSwitchBolina"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/materialSwitch_bolina"
                        android:layout_marginBottom="8dp"
                        android:onClick="@{() -> createRegattaViewModel.setBolina()}"
                        app:switchPadding="288dp"
                        app:layout_constraintBottom_toTopOf="@+id/textInputRegattaBolinaDistance"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRegattaBolinaDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:enabled="@{createRegattaViewModel.enableBolinaDistance}"
                        android:hint="@string/textfield_hint_regatta_bolina_distance"
                        app:errorEnabled="true"
                        app:layout_constraintBottom_toTopOf="@+id/textInputRegattaBuoyStern"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            app:layout_constraintWidth_max="488dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRegattaBuoyStern"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:enabled="@{createRegattaViewModel.enableBuoyStern}"
                        android:hint="@string/textfield_hint_regatta_buoy_stern"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            app:simpleItems="@array/buoy_stern_array"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


</layout>