<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="MapViewModel"
            type="it.halb.roboapp.ui.main.MapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="24dp"
            android:text="@string/manage_your_robuoy"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="20dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
        />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />


        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/info_about_robuoy"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="left"
            android:paddingLeft="60dp"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="left"
            android:paddingLeft="60dp"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="left"
            android:paddingLeft="60dp"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="50dp"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16dp"
            android:text="@string/actions_to_take"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />



        <TextView
            android:id="@+id/textView13"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:paddingLeft="50dp"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="20dp"
            android:text="@string/click_to_unbind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <Button
            android:id="@+id/buttonUNBIND"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="UNBIND"
            android:visibility="visible"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toRightOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:paddingLeft="50dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="20dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/buttonGOSTOP"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text=""
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintLeft_toRightOf="@+id/textView13"
            android:layout_marginTop="10dp"
            android:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>